# spglib

./: .gitignore  .pre-commit-config.yaml
matlab/: .gitignore  CMakeLists.txt  README.md  README_zh.md  Spglib.m  SpglibError.m  SpglibTest.m  _spglib.cpp  _spglib_test.cpp  spglib.m
